WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
116305
[BlackBerry] REGRESSION(
r150060
): Crash in LayerWebKitThread::updateTextureContents
https://bugs.webkit.org/show_bug.cgi?id=116305
Summary
[BlackBerry] REGRESSION(r150060): Crash in LayerWebKitThread::updateTextureCo...
Carlos Garcia Campos
Reported
2013-05-17 05:00:46 PDT
PR 340537
Attachments
Patch
(1.60 KB, patch)
2013-05-17 05:06 PDT
,
Carlos Garcia Campos
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2013-05-17 05:06:09 PDT
Created
attachment 202063
[details]
Patch
Rob Buis
Comment 2
2013-05-17 10:37:29 PDT
Comment on
attachment 202063
[details]
Patch Ok.
WebKit Commit Bot
Comment 3
2013-05-17 10:42:47 PDT
Comment on
attachment 202063
[details]
Patch Clearing flags on attachment: 202063 Committed
r150274
: <
http://trac.webkit.org/changeset/150274
>
WebKit Commit Bot
Comment 4
2013-05-17 10:42:49 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug