[BlackBerry] REGRESSION(r150060): Crash in LayerWebKitThread::updateTextureContents https://bugs.webkit.org/show_bug.cgi?id=116305

Patch by Carlos Garcia Campos <cgarcia@igalia.com> on 2013-05-17
Reviewed by Rob Buis.

PR 340537.
Internally reviewed by Arvid Nilsson.

Use updateLayoutAndStyleIfNeededRecursive() instead of
layoutIfNeeded() since we are about to draw in
rootLayerCommitTimerFired().

* Api/WebPage.cpp:
(BlackBerry::WebKit::WebPagePrivate::rootLayerCommitTimerFired):

Canonical link: https://commits.webkit.org/134696@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@150274 268f45cc-cd09-0410-ab3c-d52691b4dbfc